[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monarch-api2"
version = "0.1.0"
description = "Unofficial Monarch Money API client."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/monarch_api"]
